--- a/css/output.css
+++ b/css/output.css
@@ -561,6 +561,10 @@ video {
   margin-right: auto;
 }
 
+.mb-4{
+  margin-bottom: 1rem;
+}
+
 .mt-1{
   margin-top: 0.25rem;
 }
@@ -569,16 +573,16 @@ video {
   margin-top: 0.5rem;
 }
 
-.mt-20{
-  margin-top: 5rem;
-}
-
 .mt-3{
   margin-top: 0.75rem;
 }
 
 .mt-5{
   margin-top: 1.25rem;
+}
+
+.mt-8{
+  margin-top: 2rem;
 }
 
 .block{
@@ -593,20 +597,20 @@ video {
   display: none;
 }
 
-.h-full{
-  height: 100%;
-}
-
 .h-screen{
   height: 100vh;
 }
 
-.max-h-80{
-  max-height: 20rem;
-}
-
 .w-full{
   width: 100%;
+}
+
+.min-w-0{
+  min-width: 0px;
+}
+
+.max-w-lg{
+  max-width: 32rem;
 }
 
 .max-w-80{
@@ -641,14 +645,9 @@ video {
   border-radius: 0.75rem;
 }
 
-.bg-emerald-200{
+.bg-sky-400{
   --tw-bg-opacity: 1;
-  background-color: rgb(167 243 208 / var(--tw-bg-opacity, 1));
-}
-
-.bg-emerald-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(52 211 153 / var(--tw-bg-opacity, 1));
+  background-color: rgb(56 189 248 / var(--tw-bg-opacity, 1));
 }
 
 .bg-slate-100{
@@ -656,14 +655,66 @@ video {
   background-color: rgb(241 245 249 / var(--tw-bg-opacity, 1));
 }
 
-.bg-zinc-200{
+.bg-slate-200{
   --tw-bg-opacity: 1;
-  background-color: rgb(228 228 231 / var(--tw-bg-opacity, 1));
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity, 1));
 }
 
 .bg-zinc-400{
   --tw-bg-opacity: 1;
   background-color: rgb(161 161 170 / var(--tw-bg-opacity, 1));
+}
+
+.bg-\[url\(\'\.\.\/assets\/background\.png\'\)\]{
+  background-image: url('../assets/background.png');
+}
+
+.bg-gradient-to-br{
+  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+}
+
+.from-blue-500{
+  --tw-gradient-from: #3b82f6 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(59 130 246 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-cyan-400{
+  --tw-gradient-from: #22d3ee var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(34 211 238 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-sky-400{
+  --tw-gradient-from: #38bdf8 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(56 189 248 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-sky-600{
+  --tw-gradient-from: #0284c7 var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(2 132 199 / 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.to-blue-700{
+  --tw-gradient-to: #1d4ed8 var(--tw-gradient-to-position);
+}
+
+.to-cyan-600{
+  --tw-gradient-to: #0891b2 var(--tw-gradient-to-position);
+}
+
+.to-sky-600{
+  --tw-gradient-to: #0284c7 var(--tw-gradient-to-position);
+}
+
+.to-sky-800{
+  --tw-gradient-to: #075985 var(--tw-gradient-to-position);
+}
+
+.bg-cover{
+  background-size: cover;
 }
 
 .p-2{
@@ -683,6 +734,11 @@ video {
   line-height: 2rem;
 }
 
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-7xl{
   font-size: 4.5rem;
   line-height: 1;
@@ -697,6 +753,19 @@ video {
   font-weight: 700;
 }
 
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.opacity-100{
+  opacity: 1;
+}
+
+.opacity-25{
+  opacity: 0.25;
+}
+
 .shadow-xl{
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
@@ -707,11 +776,29 @@ video {
   font-family: 'Rubik', sans-serif;
 }
 
-.hover\:bg-emerald-600:hover{
+.hover\:bg-sky-600:hover{
   --tw-bg-opacity: 1;
-  background-color: rgb(5 150 105 / var(--tw-bg-opacity, 1));
+  background-color: rgb(2 132 199 / var(--tw-bg-opacity, 1));
 }
 
 .focus\:outline-blue-300:focus{
   outline-color: #93c5fd;
+}
+
+@media (min-width: 640px){
+  .sm\:max-w-80{
+    max-width: 20rem;
+  }
+}
+
+@media (min-width: 768px){
+  .md\:max-w-lg{
+    max-width: 32rem;
+  }
+}
+
+@media (min-width: 1024px){
+  .lg\:max-w-lg{
+    max-width: 32rem;
+  }
 }
